--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -7,6 +7,8 @@
     <title>Full-Stack Web Development</title>
 </head>
 <body>
-    
+    <p>
+        This is my first paragraph code.
+    </p>
 </body>
 </html>
