Profile Image Added

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -9,10 +9,10 @@
     </head>
 
     <body>
+        <img src="images/profile-picture.png" alt="Dr. Sheikh MD. Mahtabur Rahman's Profile Picture.">
         <h1>About Me</h1>
         <h2>Dr. Mahtab </h2>
-        <p>
-            <strong>Full Name: </strong>Dr. Sheikh MD. Mahtabur Rahman<br>
+        <p> <strong>Full Name: </strong>Dr. Sheikh MD. Mahtabur Rahman<br>
             <strong>Father's name: </strong>Sheikh MD. Ataur
             Rahman<br>
             <strong>Mother's Name: </strong>Mannuza Begum <br>
