Table layout added to "index.html" page and "table.html" page added

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -6,37 +6,67 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Full-Stack Web Development</title>
+        <style>
+            th,
+            td {
+                padding: 10px;
+            }
+
+        </style>
     </head>
 
     <body>
-        <img src="images/profile-picture.png" alt="Dr. Sheikh MD. Mahtabur Rahman's Profile Picture.">
-        <h1>About Me</h1>
-        <h2>Dr. Mahtab </h2>
-        <p> <strong>Full Name: </strong>Dr. Sheikh MD. Mahtabur Rahman<br>
-            <strong>Father's name: </strong>Sheikh MD. Ataur
-            Rahman<br>
-            <strong>Mother's Name: </strong>Mannuza Begum <br>
-            <strong>Sister's Name: </strong>Arifunnahar Akhi<br>
-            <strong>Birthdate: </strong> September 6th, 1994 <br>
-            <strong>Favorite Food: </strong>
-            <ol>
-                <li>Hilsha Fish</li>
-                <li>Prawn Soup</li>
-                <li>Mutton Biriany</li>
-                <li>Tehary</li>
-                <li>Fried Rice with Sizzling Beef</li>
-                <li>Smashed Potato with Mosur Daal</li>
-            </ol>
-            <strong>Favorite Person: </strong> My Father <br>
-            <strong>Childhood Spent: </strong>Lalmonirhat <br>
-            <strong>Academic Qualifications: </strong>
-            <ul>
-                <li><strong>SSC: </strong>Church of God High School, Lalmonirhat</li>
-                <li><strong>HSC: </strong>Notre Dame College, Dhaka</li>
-                <li><strong>MBBS: </strong>Northern (PVT.) Medical College, Rangpur</li>
-            </ul>
-
-        </p>
+        <center>
+            <table border="2px;">
+                <thead>
+                    <tr>
+                        <td>
+                            <img src="images/profile-picture.png"
+                                alt="Dr. Sheikh MD. Mahtabur Rahman's Profile Picture.">
+                        </td>
+                        <td>
+                            <h1>About Me</h1>
+                            <h2>Dr. Mahtab </h2>
+                        </td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><strong>Details</strong> </td>
+                        <td>
+                            <p><strong>Full Name: </strong>Dr. Sheikh MD. Mahtabur Rahman<br>
+                                <strong>Father's name: </strong>Sheikh MD. Ataur
+                                Rahman<br>
+                                <strong>Mother's Name: </strong>Mannuza Begum <br>
+                                <strong>Sister's Name: </strong>Arifunnahar Akhi<br>
+                                <strong>Birthdate: </strong> September 6th, 1994 <br>
+                                <strong>Favorite Food: </strong>
+                                <ol>
+                                    <li>Hilsha Fish</li>
+                                    <li>Prawn Soup</li>
+                                    <li>Mutton Biriany</li>
+                                    <li>Tehary</li>
+                                    <li>Fried Rice with Sizzling Beef</li>
+                                    <li>Smashed Potato with Mosur Daal</li>
+                                </ol>
+                                <strong>Favorite Person: </strong> My Father <br>
+                                <strong>Childhood Spent: </strong>Lalmonirhat <br>
+                                <strong>Academic Qualifications: </strong>
+                                <ul>
+                                    <li><strong>SSC: </strong>Church of God High School, Lalmonirhat</li>
+                                    <li><strong>HSC: </strong>Notre Dame College, Dhaka</li>
+                                    <li><strong>MBBS: </strong>Northern (PVT.) Medical College, Rangpur </li>
+                                </ul>
+                                <br>
+                            </p>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </center>
     </body>
+    <footer>
+        <a href="table.html">Table</a>
+    </footer>
 
 </html>
