Table border added and scrollbar is designed

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -6,12 +6,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Full-Stack Web Development</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <center>
-            <table border="2px;">
+            <table border="2px solid">
                 <thead>
                     <tr>
                         <td>
@@ -26,7 +26,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td><strong>Details</strong> </td>
+                        <td class="Details"><strong>Details</strong> </td>
                         <td>
                             <p><strong>Full Name: </strong>Dr. Sheikh MD. Mahtabur Rahman<br>
                                 <strong>Father's name: </strong>Sheikh MD. Ataur
@@ -60,7 +60,10 @@
         </center>
     </body>
     <footer>
+
+        <a href="index.html">Home</a>
         <a href="table.html">Table</a>
+
     </footer>
 
 </html>
