--- a/HTML - Personal Site/table.html
+++ b/HTML - Personal Site/table.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Table</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -55,6 +55,7 @@
     <footer>
         <center>
             <a href="index.html">Home</a>
+            <a href="table.html">Table</a>
         </center>
     </footer>
 
