Footer Menu CSS property added

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -60,10 +60,10 @@
         </center>
     </body>
     <footer>
-
-        <a href="index.html">Home</a>
-        <a href="table.html">Table</a>
-
+        <ul>
+            <li class="Footer"><a href="index.html">Home</a></li>
+            <li class="Footer"><a href="table.html">Table</a></li>
+        </ul>
     </footer>
 
 </html>
