--- a/HTML - Personal Site/table.html
+++ b/HTML - Personal Site/table.html
@@ -54,8 +54,10 @@
     </body>
     <footer>
         <center>
-            <a href="index.html">Home</a>
-            <a href="table.html">Table</a>
+            <ul class="Footer">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="table.html">Table</a></li>
+            </ul>
         </center>
     </footer>
 
