Class added to Footer List Items for Menu Creation

--- a/HTML - Personal Site/table.html
+++ b/HTML - Personal Site/table.html
@@ -55,8 +55,8 @@
     <footer>
         <center>
             <ul class="Footer">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="table.html">Table</a></li>
+                <li class="Footer"><a href="index.html">Home</a></li>
+                <li class="Footer"><a href="table.html">Table</a></li>
             </ul>
         </center>
     </footer>
