--- a/HTML - Personal Site/form.html
+++ b/HTML - Personal Site/form.html
@@ -5,14 +5,42 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Full-Stack Web Development</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
+        <h1>Contact Us</h1>
+        <p>Feel free to contact us. We will try to respond as soon as possible.</p><br>
+        <form action="">
+            <table align="center">
+                <tr>
+                    <td><label for="Username">Your Name: </label>
+                        <input type="text" name="Name" id="" placeholder="Your Full Name"></td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="UserEmailAddress">Your Email: </label>
+                        <input type="email" name="Email" id="" placeholder="Your Email Address">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="Message: ">Message: </label>
+                        <input type="textarea" name="" id="textarea" placeholder="Your message">
+                    </td>
+                </tr>
 
+            </table>
+        </form>
     </body>
     <footer>
+        <ul>
+            <li class="Footer"><a href="index.html">Home</a></li>
+            <li class="Footer"><a href="table.html">Table</a></li>
+            <li class="Footer"><a href="form.html">Contact Us</a></li>
 
+        </ul>
     </footer>
 
 </html>
