--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -63,6 +63,9 @@
         <ul>
             <li class="Footer"><a href="index.html">Home</a></li>
             <li class="Footer"><a href="table.html">Table</a></li>
+            <li class=""><a href="form.html">Table</a></li>
+            <li class="Footer"><a href="form.html">Contact Us</a></li>
+
         </ul>
     </footer>
 
