--- a/HTML - Personal Site/table.html
+++ b/HTML - Personal Site/table.html
@@ -57,6 +57,7 @@
             <ul class="Footer">
                 <li class="Footer"><a href="index.html">Home</a></li>
                 <li class="Footer"><a href="table.html">Table</a></li>
+                <li class="Footer"><a href="form.html">Contact Us</a></li>
             </ul>
         </center>
     </footer>
