table.html link label is updated to Experience

--- a/HTML - Personal Site/form.html
+++ b/HTML - Personal Site/form.html
@@ -37,7 +37,7 @@
     <footer>
         <ul>
             <li class="Footer"><a href="index.html">Home</a></li>
-            <li class="Footer"><a href="table.html">Table</a></li>
+            <li class="Footer"><a href="table.html">Experience</a></li>
             <li class="Footer"><a href="form.html">Contact Us</a></li>
 
         </ul>
