table.html is renamed to experience.html

--- a/HTML - Personal Site/experience.html
+++ b/HTML - Personal Site/experience.html
@@ -56,7 +56,8 @@
         <center>
             <ul class="Footer">
                 <li class="Footer"><a href="index.html">Home</a></li>
-                <li class="Footer"><a href="table.html">Experience</a></li>
+                <li class="Footer"><a href="experience.html
+                    ">Experience</a></li>
                 <li class="Footer"><a href="form.html">Contact Us</a></li>
             </ul>
         </center>
