--- a/HTML - Personal Site/form.html
+++ b/HTML - Personal Site/form.html
@@ -12,7 +12,7 @@
     <body>
         <h1>Contact Us</h1>
         <p>Feel free to contact us. We will try to respond as soon as possible.</p><br>
-        <form action="">
+        <form action="mailto:anikangel664@gmail.com" method="post">
             <table align="center">
                 <tr>
                     <td><label for="Username">Your Name: </label>
