textarea "Message" name updated

--- a/HTML - Personal Site/form.html
+++ b/HTML - Personal Site/form.html
@@ -27,7 +27,7 @@
                 <tr>
                     <td>
                         <label for="Message: ">Message: </label>
-                        <input type="textarea" name="" id="textarea" placeholder="Your message"><br><br>
+                        <input type="textarea" name="Message" id="textarea" placeholder="Your message"><br><br>
                         <input type="submit" value="Submit">
                     </td>
                 </tr>
