--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                                 alt="Dr. Sheikh MD. Mahtabur Rahman's Profile Picture.">
                         </td>
                         <td>
-                            <h1>About Me</h1>
+                            <h1>Biography</h1>
                             <h2>Dr. Mahtab </h2>
                         </td>
                     </tr>
