About Me title added on index.html page

--- a/index.html
+++ b/index.html
@@ -1,71 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Full-Stack Web Development</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Full-Stack Web Development</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 
-    <body>
-        <center>
-            <table border="2px solid">
-                <thead>
-                    <tr>
-                        <td>
-                            <img src="images/profile-picture.png"
-                                alt="Dr. Sheikh MD. Mahtabur Rahman's Profile Picture.">
-                        </td>
-                        <td>
-                            <h1>Biography</h1>
-                            <h2>Dr. Mahtab </h2>
-                        </td>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td class="Details"><strong>Details</strong> </td>
-                        <td>
-                            <p><strong>Full Name: </strong>Dr. Sheikh MD. Mahtabur Rahman<br>
-                                <strong>Father's name: </strong>Sheikh MD. Ataur
-                                Rahman<br>
-                                <strong>Mother's Name: </strong>Mannuza Begum <br>
-                                <strong>Sister's Name: </strong>Arifunnahar Akhi<br>
-                                <strong>Birthdate: </strong> September 6th, 1994 <br>
-                                <strong>Favorite Food: </strong>
-                                <ol>
-                                    <li>Hilsha Fish</li>
-                                    <li>Prawn Soup</li>
-                                    <li>Mutton Biriany</li>
-                                    <li>Tehary</li>
-                                    <li>Fried Rice with Sizzling Beef</li>
-                                    <li>Smashed Potato with Mosur Daal</li>
-                                </ol>
-                                <strong>Favorite Person: </strong> My Father <br>
-                                <strong>Childhood Spent: </strong>Lalmonirhat <br>
-                                <strong>Academic Qualifications: </strong>
-                                <ul>
-                                    <li><strong>SSC: </strong>Church of God High School, Lalmonirhat</li>
-                                    <li><strong>HSC: </strong>Notre Dame College, Dhaka</li>
-                                    <li><strong>MBBS: </strong>Northern (PVT.) Medical College, Rangpur </li>
-                                </ul>
-                                <br>
-                            </p>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </center>
-    </body>
-    <footer>
-        <ul>
-            <li class="Footer"><a href="index.html">Home</a></li>
-            <li class="Footer"><a href="experience.html">Experience</a></li>
-            <li class="Footer"><a href="form.html">Contact Us</a></li>
+<body>
+    <center>
+        <table border="2px solid">
+            <thead>
+                <tr>
+                    <td>
+                        <img src="images/profile-picture.png" alt="Dr. Sheikh MD. Mahtabur Rahman's Profile Picture.">
+                    </td>
+                    <td>
+                        <h1>About Me</h1>
+                        <h2>Dr. Mahtab </h2>
+                    </td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="Details"><strong>Details</strong> </td>
+                    <td>
+                        <p><strong>Full Name: </strong>Dr. Sheikh MD. Mahtabur Rahman<br>
+                            <strong>Father's name: </strong>Sheikh MD. Ataur
+                            Rahman<br>
+                            <strong>Mother's Name: </strong>Mannuza Begum <br>
+                            <strong>Sister's Name: </strong>Arifunnahar Akhi<br>
+                            <strong>Birthdate: </strong> September 6th, 1994 <br>
+                            <strong>Favorite Food: </strong>
+                            <ol>
+                                <li>Hilsha Fish</li>
+                                <li>Prawn Soup</li>
+                                <li>Mutton Biriany</li>
+                                <li>Tehary</li>
+                                <li>Fried Rice with Sizzling Beef</li>
+                                <li>Smashed Potato with Mosur Daal</li>
+                            </ol>
+                            <strong>Favorite Person: </strong> My Father <br>
+                            <strong>Childhood Spent: </strong>Lalmonirhat <br>
+                            <strong>Academic Qualifications: </strong>
+                            <ul>
+                                <li><strong>SSC: </strong>Church of God High School, Lalmonirhat</li>
+                                <li><strong>HSC: </strong>Notre Dame College, Dhaka</li>
+                                <li><strong>MBBS: </strong>Northern (PVT.) Medical College, Rangpur </li>
+                            </ul>
+                            <br>
+                        </p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </center>
+</body>
+<footer>
+    <ul>
+        <li class="Footer"><a href="index.html">Home</a></li>
+        <li class="Footer"><a href="experience.html">Experience</a></li>
+        <li class="Footer"><a href="form.html">Contact Us</a></li>
 
-        </ul>
-    </footer>
+    </ul>
+</footer>
 
 </html>
