form-text class added on p tag of form.html font-face and font-family is added at style.css 'Staatliches' new font added on newly created folder named fonts

--- a/form.html
+++ b/form.html
@@ -11,7 +11,7 @@
 
     <body>
         <h1>Contact Us</h1>
-        <p>Feel free to contact us. We will try to respond as soon as possible.</p><br>
+        <p class="form-text">Feel free to contact us. We will try to respond as soon as possible.</p><br>
         <form action="mailto:anikangel664@gmail.com" method="post" enctype="text/plain">
             <table align="center">
                 <tr>
@@ -24,7 +24,7 @@
                         <input type="email" name="Email" id="" placeholder="Your Email Address">
                     </td>
                 </tr>
-                <tr>
+                <tr>                    
                     <td>
                         <label for="Message: ">Message: </label>
                         <input type="textarea" name="Message" id="textarea" placeholder="Your message"><br><br>
