Links and Folders updated

--- a/index.html
+++ b/index.html
@@ -4,45 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Homepage</title>
 </head>
 <body>
-    <div class="content">
-        <div>
-            Favorite Food
-            <ul>
-                <li>Hilsha Fish</li>
-                <li>Mutton</li>
-                <li>Prawn</li>
-                <li>Shidol</li>
-            </ul>
-        </div> 
-        <div>
-            To Do
-            <ol>
-                <li>Bangla</li>
-                <li>English</li>
-                <li>Math</li>
-                <li>Mental Ability</li>
-            </ol>
-        </div>
-        <div>
-            Places
-            <ul>
-                <li>Cox's Bazar</li>
-                <li> Saint Martins</li>
-                <li>Sylhet Tea State</li>
-            </ul>
-        </div>
-        <div>
-            <ol>
-                <li>King of Fighters</li>
-                <li>Rise of the Nations</li>
-                <li>Command & Conquerer</li>
-                <li>Call of Duty</li>
-            </ol>
-        </div>
-    </div>
+  <h1>Homepage</h1>
+	<a href="https://www.theodinproject.com/about">click me</a>
+
+	<a href="about.html">About</a>
 </body>
 </html>
