./TheOdinProject/index.html updated

--- a/pages/about.html
+++ b/pages/about.html
@@ -7,6 +7,6 @@
 
   <body>
     <h1>About Page</h1>
-    <a href="/TheOdinProject/index.html">Home</a>
+    <a href="./TheOdinProject/index.html">Home</a>
   </body>
 </html>
