--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Homepage</title>
-      <link rel="stylesheet" href="./style.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Homepage</title>
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <h1>Homepage</h1>
-    <a href="https://www.theodinproject.com/about">click me</a>
-
+    <a href="https://www.theodinproject.com/about" target="_blank">click me</a>
     <a href="./pages/about.html">About</a>
-
-    <img src="./images/dog.jpg">
+    <br /><br />
+    <figure>
+      <img class="hero-image" src="./images/dog.jpg" alt="a dog" />
+    </figure>
   </body>
 </html>
